--- a/admin.html
+++ b/admin.html
@@ -104,7 +104,12 @@
 
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
-    import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js';
+    import { 
+  getAuth, 
+  onAuthStateChanged, 
+  signOut, 
+  sendPasswordResetEmail 
+} from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js';
     import {
       getFirestore, doc, getDoc, collection, getDocs, setDoc,
       addDoc, updateDoc, deleteDoc, query, where
