--- a/login.html
+++ b/login.html
@@ -120,8 +120,15 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import {
       getAuth,
-      signInWithEmailAndPassword
+      signInWithEmailAndPassword,
+      signOut
     } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
+
+    import {
+  getFirestore,
+  doc,
+  getDoc
+} from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCZoVVfUPSyS7zELBqEsLNYuVdBqfSq-BE",
@@ -135,6 +142,8 @@
 
     const app  = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    const db = getFirestore(app);
+
 
     const loginForm    = document.getElementById('login-form');
     const errorMessage = document.getElementById('error-message');
@@ -149,7 +158,19 @@
       errorMessage.textContent   = '';
 
       try {
-        await signInWithEmailAndPassword(auth, email, password);
+        const cred = await signInWithEmailAndPassword(auth, email, password);
+
+    // 2) pobieramy profil Firestore
+    const uDoc = await getDoc(doc(db, 'users', cred.user.uid));
+    const data = uDoc.data() || {};
+
+    // 3) jeśli disabled → wyloguj i pokaż komunikat
+    if (data.disabled) {
+      await signOut(auth);
+      errorMessage.textContent = 'To konto jest zablokowane. Skontaktuj się z administratorem.';
+      errorMessage.style.display = 'block';
+      return;
+    }
         // Po zalogowaniu przekieruj na stronę główną:
         window.location.href = "index.html";
       } catch (error) {
