--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -64,6 +64,10 @@
       <h3>Uzupełnij szczegóły wizyty</h3>
       <label for="pet-select">Wybierz zwierzaka</label>
       <select id="pet-select"></select>
+      <p class="help-text">
+  Nie dodałeś jeszcze zwierzaka? 
+  <a href="konto.html">Zrób to w Moje Konto</a>.
+</p>
 
       <label for="visit-type">Rodzaj wizyty</label>
       <select id="visit-type">
