--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -39,6 +39,18 @@
   cursor: not-allowed;
   opacity: 0.6;
 }
+    .help-text {
+    font-size: 0.9rem;
+    color: #555;
+    margin-top: 4px;
+  }
+  .help-text a {
+    color: #4caf50;
+    text-decoration: none;
+  }
+  .help-text a:hover {
+    text-decoration: underline;
+  }
   </style>
 </head>
 <body>
