--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -462,6 +462,7 @@
     date:        selDate,
     hour:        selTime,
     endhour,                   // nowe pole
+    duration:    durationMin,
     visitType:   visitTypeText,// pełny tekst
     location,
     petId,
