--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -153,11 +153,13 @@
         );
         const snap = await getDocs(q);
         bookingsMap[doctorId] = snap.docs.map(d => {
-          const { hour, endhour } = d.data();
-          const [hs, ms] = hour.split(':').map(n=>+n);
-          const [he, me] = endhour.split(':').map(n=>+n);
-          return { startMin: hs*60 + ms, endMin: he*60 + me };
-      });
+  const data   = d.data();
+  const hour   = data.hour;
+  const endRaw = data.endhour ?? data.endHour;       // ← tu fallback
+  const [hs, ms] = hour.split(':').map(n=>+n);
+  const [he, me] = endRaw.split(':').map(n=>+n);
+  return { startMin: hs*60 + ms, endMin: he*60 + me };
+});
     })
   );
 }
@@ -397,14 +399,13 @@
     );
     const snap = await getDocs(q);
     busyMap[docId] = snap.docs.map(d => {
-      const data = d.data();
-      const [hs, ms] = data.hour.split(':').map(n=>+n);
-      const [he, me] = data.endhour.split(':').map(n=>+n);
-      return {
-        startMin: hs*60 + ms,
-        endMin:   he*60 + me
-      };
-    });
+  const data   = d.data();
+  const [hs, ms] = data.hour.split(':').map(n=>+n);
+  const endRaw   = data.endhour ?? data.endHour;
+  const [he, me] = endRaw.split(':').map(n=>+n);
+  return { startMin: hs*60 + ms, endMin: he*60 + me };
+});
+
   }));
 
   // 6) wyłącz tych, którzy mają overlap:
@@ -455,13 +456,13 @@
   const endTotalMin = startMinutes + durationMin - 1;
   const endH = String(Math.floor(endTotalMin/60)).padStart(2,'0');
   const endM = String(endTotalMin % 60).padStart(2,'0');
-  const endhour = `${endH}:${endM}`;
+  const endHour = `${endH}:${endM}`;
 
   const bookingData = {
     createdAt:   serverTimestamp(),
     date:        selDate,
     hour:        selTime,
-    endhour,                   // nowe pole
+    endHour,                   // nowe pole
     duration:    durationMin,
     visitType:   visitTypeText,// pełny tekst
     location,
