--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -485,7 +485,7 @@
     alert(
       `Wizyta potwierdzona!\n\n` +
       `Data: ${selDate}\n` +
-      `Godzina: ${selTime} – ${endhour}\n` +
+      `Godzina: ${selTime} – ${endHour}\n` +
       `Lekarz: ${docName}\n` +
       `Zwierzak: ${petName} (${petSpec})\n` +
       `Rodzaj wizyty: ${visitTypeText}`
